# pikmin

./: .clang-format  .gitignore  CMakeLists.txt  configure.py
include/: AIConstant.h  AIPerf.h  Actor.h  Animator.h  Ayu.h  AyuStack.h  Boss.h  Camera.h  CinematicPlayer.h  CmdStream.h  Collision.h  Condition.h  CoreNucleus.h  Creature.h  DebugLog.h  DualCreature.h  DynCreature.h  EffectMgr.h  FlowController.h  FormationMgr.h  GameCoreSection.h  Graphics.h  Interactions.h  ItemMgr.h  Joint.h  KEffect.h  King.h  LifeGauge.h  Light.h  MapMgr.h  Material.h  Matrix3f.h  Matrix4f.h  Menu.h  MoviePlayer.h  Navi.h  NaviMgr.h  NaviState.h  NinLogoSetupSection.h  ObjType.h  (+25 more)
include/Dolphin/: AmcExi2.h  PPCArch.h  PPCArch.inc  __start.h  card.h  dvd.h  exi.h  gx.h  hw_regs.h  hw_regs.inc  os.h  vi.h  vitypes.h
include/Dolphin/GX/: GXAttr.h  GXBump.h  GXData.h  GXFifo.h  GXGeometry.h  GXMisc.h  GXStubs.h  GXTexture.h  GXTypes.h
include/Dolphin/OS/: OSBootInfo.h  OSContext.inc  OSException.h  OSExi.h  OSFastCast.h  OSInterrupt.h  OSMutex.h  OSReset.h  OSRtc.h  OSThread.h  OSTime.h
include/P2D/: Pane.h
include/PSU/: Tree.h
include/PowerPC_EABI_Support/MSL_C/MSL_Common/: rand.h
include/TAI/: Aeffect.h
include/jaudio/: audiostruct.h  bankdrv.h  piki_player.h  verysimple.h
include/stl/: math.h
include/zen/: DrawCM.h  DrawContainer.h  DrawProgre.h  DrawWorldMap.h  MenuPanelMgr.h  Number.h  ogTest.h  particle.h
src/: CMakeLists.txt  newlibStub.c  sections.ld  sysBootup.cpp
src/MSL_C/PPCEABI/bare/H/: arith.c
src/OdemuExi2/: CMakeLists.txt
src/ai/: CMakeLists.txt  ai.c
src/amcExi2/: CMakeLists.txt
src/amcnotstub/: CMakeLists.txt
src/amcstubs/: CMakeLists.txt
src/ar/: CMakeLists.txt  ar.c  arq.c
src/base/: CMakeLists.txt  PPCArch.c
src/card/: CARDBios.c  CARDBlock.c  CARDCheck.c  CARDCreate.c  CARDDelete.c  CARDDir.c  CARDFormat.c  CARDMount.c  CARDRdwr.c  CARDStat.c  CARDUnlock.c  CMakeLists.txt
src/db/: CMakeLists.txt  db.c
src/dsp/: CMakeLists.txt
src/dvd/: CMakeLists.txt  dvd.c  dvdfs.c  fstload.c
src/exi/: CMakeLists.txt  EXIBios.c  EXIUart.c
src/gx/: CMakeLists.txt  GXAttr.c  GXFifo.c  GXInit.c  GXMisc.c  GXPixel.c  GXTexture.c  GXTransform.c
src/hio/: CMakeLists.txt  hio.c
src/hvqm4dec/: CMakeLists.txt  hvqm4dec.c
src/jaudio/: CMakeLists.txt  aictrl.c  audiothread.c  bankdrv.c  bankread.c  connect.c  cpubuf.c  driverinterface.c  dsp_cardunlock.c  dspbuf.c  dspdriver.c  dspinterface.c  dsptask.c  dummyrom.c  dvdthread.c  heapctrl.c  hvqm_play.c  ipldec.c  ja_calc.c  jammain_2.c  jamosc.c  oneshot.c  piki_player.c  pikidemo.c  pikiinter.c  seqsetup.c  streamctrl.c  syncstream.c  verysimple.c
src/mtx/: CMakeLists.txt  mtx.c  mtx44.c  vec.c
src/odemustubs/: CMakeLists.txt
src/odenotstub/: CMakeLists.txt
src/os/: CMakeLists.txt  OS.c  OSAlarm.c  OSAlloc.c  OSAudioSystem.c  OSCache.c  OSContext.c  OSError.c  OSExi.c  OSFont.c  OSInterrupt.c  OSLink.c  OSMemory.c  OSMessage.c  OSMutex.c  OSReboot.c  OSReset.c  OSResetSW.c  OSRtc.c  OSSerial.c  OSSync.c  OSThread.c  OSTime.c  OSUartExi.c  __ppc_eabi_init.cpp  __start.c
src/pad/: CMakeLists.txt  Pad.c
src/plugPikiColin/: CMakeLists.txt  cardutil.cpp  cinePlayer.cpp  dayMgr.cpp  game.cpp  gameflow.cpp  gauges.cpp  gui.cpp  mapMgr.cpp  mapSelect.cpp  newPikiGame.cpp  ninLogo.cpp  parameters.cpp  plugPiki.cpp  titles.cpp
src/plugPikiKando/: CMakeLists.txt  aiAction.cpp  aiActions.cpp  aiAttack.cpp  aiBore.cpp  aiBridge.cpp  aiCrowd.cpp  aiDecoy.cpp  aiEscape.cpp  aiGuard.cpp  aiPerf.cpp  aiPick.cpp  aiPullout.cpp  aiPut.cpp  aiRandomBoid.cpp  aiRescue.cpp  aiStone.cpp  aiTransport.cpp  aiWeed.cpp  bombItem.cpp  creature.cpp  creatureMove.cpp  creatureStick.cpp  demoEvent.cpp  dualCreature.cpp  dynCreature.cpp  formationMgr.cpp  gameCoreSection.cpp  genItem.cpp  genMapParts.cpp  generator.cpp  generatorCache.cpp  goalItem.cpp  interactBattle.cpp  itemAI.cpp  itemGem.cpp  itemMgr.cpp  keyItem.cpp  kmath.cpp  mapParts.cpp  (+24 more)
src/plugPikiNakata/: CMakeLists.txt  nlibgeometry3d.cpp  nlibspline.cpp  nlibsystem.cpp  panianimator.cpp  taiattackactions.cpp  taicollec.cpp  taimizinko.cpp  tekibteki.cpp  tekiinteraction.cpp  tekimgr.cpp  tekinakata.cpp
src/plugPikiNishimura/: Boss.cpp  BossMgr.cpp  CMakeLists.txt  CoreNucleus.cpp  King.cpp  KingAi.cpp  KingBack.cpp  KingBody.cpp  Kogane.cpp  KoganeAi.cpp  Mizu.cpp  MizuAi.cpp  Nucleus.cpp  Pom.cpp  PomAi.cpp  Slime.cpp  SlimeCreature.cpp  Snake.cpp  SnakeAi.cpp  SnakeBody.cpp  Spider.cpp  genBoss.cpp
src/plugPikiOgawa/: CMakeLists.txt  ogMessage.cpp  ogPause.cpp  ogSub.cpp  ogTitle.cpp
src/plugPikiYamashita/: CMakeLists.txt  P2DGrafContext.cpp  P2DPane.cpp  P2DPicture.cpp  P2DPrint.cpp  P2DStream.cpp  P2DTextBox.cpp  P2DWindow.cpp  TAIAeffect.cpp  TAIbeatle.cpp  TAIdororo.cpp  TAIkabekuiB.cpp  TAIkabekuiC.cpp  drawCMbest.cpp  drawCMresult.cpp  drawCommon.cpp  drawGameInfo.cpp  drawMenu.cpp  drawMenuBase.cpp  drawSaveFailure.cpp  drawWorldMap.cpp  effectMgr.cpp  gameCourseClear.cpp  menuPanelMgr.cpp  particleGenerator.cpp  tekiyteki.cpp  zenGraphics.cpp
src/si/: CMakeLists.txt
src/sysCommon/: CMakeLists.txt  ayuStack.cpp  cmdStream.cpp  grLight.cpp  graphics.cpp  matMath.cpp  node.cpp  shapeBase.cpp  stdSystem.cpp  stream.cpp
src/sysDolphin/: CMakeLists.txt  dgxGraphics.cpp  gameApp.cpp  sysNew.cpp  system.cpp  texture.cpp
src/vi/: CMakeLists.txt  vi.c
