# Future libraries go here:
add_subdirectory(sysCommon)
add_subdirectory(sysDolphin)
add_subdirectory(hvqm4dec)
add_subdirectory(ai)
add_subdirectory(amcExi2)
add_subdirectory(amcnotstub)
add_subdirectory(ar)
add_subdirectory(base)
add_subdirectory(card)
add_subdirectory(db)
add_subdirectory(dsp)
add_subdirectory(dvd)
add_subdirectory(exi)
add_subdirectory(gx)
add_subdirectory(hio)
add_subdirectory(jaudio)
add_subdirectory(mtx)
add_subdirectory(OdemuExi2)
add_subdirectory(odenotstub)
add_subdirectory(os)
add_subdirectory(pad)
add_subdirectory(si)
add_subdirectory(vi)
add_subdirectory(plugPikiColin)
add_subdirectory(plugPikiKando)
